Implemented connected functionality

--- a/ios/Seilbag/Info.plist
+++ b/ios/Seilbag/Info.plist
@@ -54,6 +54,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Regular.ttf</string>
+		<string>Inter-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
