--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/slider": "^4.4.3",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -24,8 +23,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0",
-    "react-native-svg-transformer": "^1.1.0",
-    "rn-vertical-slider": "^3.1.1"
+    "react-native-svg-transformer": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
