--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@sharcoux/slider": "^7.0.5",
+    "base-64": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-anchor-point": "^1.0.6",
+    "react-native-ble-manager": "^10.1.4",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.5.4",
@@ -32,6 +34,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/base-64": "^1.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
