--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@sharcoux/slider": "^7.0.5",
     "base-64": "^1.0.0",
+    "i18next": "^23.5.1",
     "react": "18.2.0",
+    "react-i18next": "^13.2.2",
     "react-native": "0.72.4",
     "react-native-anchor-point": "^1.0.6",
     "react-native-ble-manager": "^10.1.4",
